Added full spectrum classification

--- a/python_code/classification_of_full_spectrum.ipynb
+++ b/python_code/classification_of_full_spectrum.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4  [3468.5203, 3463.0237, 3475.2666, 3468.5999, 3...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,14 +211,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-16 17:09:04.412850: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-01-16 17:09:04.440047: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-01-16 17:09:04.440095: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-01-16 17:09:04.441000: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-01-16 17:09:04.446738: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-01-16 17:09:04.447577: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-01-16 17:38:34.532800: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-01-16 17:38:34.557954: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-01-16 17:38:34.557987: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-01-16 17:38:34.558776: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-01-16 17:38:34.563527: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-01-16 17:38:34.563959: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-16 17:09:05.088816: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-01-16 17:38:35.274155: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,30 +238,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Padding sequences with zeros\n",
-    "#X = pad_sequences(X, padding='post', dtype='float32')"
+    "X = pad_sequences(X, padding='post', dtype='float32')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1851.9185 1746.404  1537.9485 ...    0.        0.        0.    ]\n",
-      " [1998.4773 2034.2784 1977.515  ...    0.        0.        0.    ]\n",
-      " [2214.0876 2846.9824 3696.411  ...    0.        0.        0.    ]\n",
+      "[[2709.3699  2697.1318  2696.0413  ... 1089.0814  1092.8083  1086.699  ]\n",
+      " [2979.317   2985.707   2970.1677  ... 1286.9803  1276.4037  1268.0922 ]\n",
+      " [3702.5627  3592.4902  3640.8423  ... 2086.6956  2064.7766  2064.2126 ]\n",
       " ...\n",
-      " [1906.7185 1571.1713 1579.2836 ...    0.        0.        0.    ]\n",
-      " [1850.5511 1533.9598 1549.0426 ...    0.        0.        0.    ]\n",
-      " [1482.5781 1507.8912 1505.2144 ...    0.        0.        0.    ]]\n"
+      " [1924.9346  1880.2902  1873.738   ...  890.5974   896.7415   907.45355]\n",
+      " [1834.2257  1827.9034  1830.4606  ...  859.38354  853.8679   858.3631 ]\n",
+      " [1792.1012  1771.9321  1791.6136  ...  822.06915  824.7414   829.86   ]]\n"
      ]
     }
    ],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,32 +325,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overall Accuracy: 0.7257799671592775\n",
+      "Overall Accuracy: 0.8620689655172413\n",
       "\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "Hyperglycemia       0.74      0.73      0.73       203\n",
-      " Hypoglycemia       0.71      0.72      0.71       200\n",
-      "       Normal       0.73      0.73      0.73       206\n",
+      "Hyperglycemia       0.83      0.86      0.84       203\n",
+      " Hypoglycemia       0.90      0.84      0.87       200\n",
+      "       Normal       0.86      0.89      0.87       206\n",
       "\n",
-      "     accuracy                           0.73       609\n",
-      "    macro avg       0.73      0.73      0.73       609\n",
-      " weighted avg       0.73      0.73      0.73       609\n",
+      "     accuracy                           0.86       609\n",
+      "    macro avg       0.86      0.86      0.86       609\n",
+      " weighted avg       0.86      0.86      0.86       609\n",
       "\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[148  27  28]\n",
-      " [ 29 144  27]\n",
-      " [ 24  32 150]]\n"
+      "[[174  13  16]\n",
+      " [ 18 168  14]\n",
+      " [ 17   6 183]]\n"
      ]
     }
    ],
@@ -368,9 +368,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/eddie/.local/lib/python3.10/site-packages/sklearn/linear_model/_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -380,44 +394,44 @@
        "LogisticRegression(max_iter=1000, multi_class='multinomial')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lr = LogisticRegression(multi_class=\"multinomial\", max_iter=1000)\n",
+    "lr = LogisticRegression(multi_class=\"multinomial\", max_iter=10000)\n",
     "lr.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overall Accuracy: 0.44991789819376027\n",
+      "Overall Accuracy: 0.7274220032840722\n",
       "\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "Hyperglycemia       0.41      0.13      0.19       203\n",
-      " Hypoglycemia       0.48      0.48      0.48       200\n",
-      "       Normal       0.44      0.73      0.55       206\n",
+      "Hyperglycemia       0.75      0.64      0.69       203\n",
+      " Hypoglycemia       0.73      0.81      0.76       200\n",
+      "       Normal       0.71      0.74      0.72       206\n",
       "\n",
-      "     accuracy                           0.45       609\n",
-      "    macro avg       0.44      0.45      0.41       609\n",
-      " weighted avg       0.44      0.45      0.41       609\n",
+      "     accuracy                           0.73       609\n",
+      "    macro avg       0.73      0.73      0.73       609\n",
+      " weighted avg       0.73      0.73      0.73       609\n",
       "\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[ 26  53 124]\n",
-      " [ 35  97  68]\n",
-      " [  3  52 151]]\n"
+      "[[129  30  44]\n",
+      " [ 19 161  20]\n",
+      " [ 23  30 153]]\n"
      ]
     }
    ],
