--- a/python_code/classification_of_peaks.ipynb
+++ b/python_code/classification_of_peaks.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,16 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../data/full_spectra.csv\")"
+    "df = pd.read_csv(\"../../data/Thomas_peaks.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,70 +106,70 @@
        "      <th>0</th>\n",
        "      <td>201210-1-00</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...</td>\n",
-       "      <td>[200.0, 200.68336, 201.36674, 202.05011, 202.7...</td>\n",
-       "      <td>[2709.3699, 2697.1318, 2696.0413, 2678.5925, 2...</td>\n",
+       "      <td>[ 727 1026 1820]</td>\n",
+       "      <td>[696.81091, 901.13898, 1443.7357]</td>\n",
+       "      <td>[1851.9185, 1746.4041, 1537.9485]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>201210-1-01</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...</td>\n",
-       "      <td>[200.0, 200.68336, 201.36674, 202.05011, 202.7...</td>\n",
-       "      <td>[2979.3169, 2985.707, 2970.1677, 2947.095, 294...</td>\n",
+       "      <td>[ 403  617 1021 1378 1532 1818 2074]</td>\n",
+       "      <td>[475.39862, 621.64008, 897.72211, 1141.6857, 1...</td>\n",
+       "      <td>[1998.4773, 2034.2784, 1977.515, 1779.342, 173...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>201210-1-02</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...</td>\n",
-       "      <td>[200.0, 200.68336, 201.36674, 202.05011, 202.7...</td>\n",
-       "      <td>[3702.5627, 3592.4902, 3640.8423, 3593.415, 35...</td>\n",
+       "      <td>[ 412  600 1049 1552 1812 2079]</td>\n",
+       "      <td>[481.54898, 610.02277, 916.85651, 1260.5923, 1...</td>\n",
+       "      <td>[2214.0876, 2846.9824, 3696.4109, 2195.7212, 2...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>201210-1-03</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...</td>\n",
-       "      <td>[200.0, 200.68336, 201.36674, 202.05011, 202.7...</td>\n",
-       "      <td>[8129.5938, 8222.3184, 8370.2803, 8534.415, 86...</td>\n",
+       "      <td>[  17  385  591 1047 1411 1590 1884 2052]</td>\n",
+       "      <td>[211.61731, 463.09796, 603.87244, 915.48975, 1...</td>\n",
+       "      <td>[10350.545, 2536.3599, 3342.7229, 3452.3679, 3...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>201210-1-04</td>\n",
        "      <td>Normal</td>\n",
-       "      <td>[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...</td>\n",
-       "      <td>[200.0, 200.68336, 201.36674, 202.05011, 202.7...</td>\n",
-       "      <td>[3468.5203, 3463.0237, 3475.2666, 3468.5999, 3...</td>\n",
+       "      <td>[ 368  616  785 1173 1445 1602 1808 2090]</td>\n",
+       "      <td>[451.48065, 620.95673, 736.44647, 1001.5945, 1...</td>\n",
+       "      <td>[2277.2156, 2264.5063, 2167.6958, 2238.8494, 2...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        SpecID  Status                                                Seq  \\\n",
-       "0  201210-1-00  Normal  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
-       "1  201210-1-01  Normal  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
-       "2  201210-1-02  Normal  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
-       "3  201210-1-03  Normal  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
-       "4  201210-1-04  Normal  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+       "        SpecID  Status                                        Seq  \\\n",
+       "0  201210-1-00  Normal                           [ 727 1026 1820]   \n",
+       "1  201210-1-01  Normal       [ 403  617 1021 1378 1532 1818 2074]   \n",
+       "2  201210-1-02  Normal            [ 412  600 1049 1552 1812 2079]   \n",
+       "3  201210-1-03  Normal  [  17  385  591 1047 1411 1590 1884 2052]   \n",
+       "4  201210-1-04  Normal  [ 368  616  785 1173 1445 1602 1808 2090]   \n",
        "\n",
        "                                          WaveNumber  \\\n",
-       "0  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
-       "1  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
-       "2  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
-       "3  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
-       "4  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+       "0                  [696.81091, 901.13898, 1443.7357]   \n",
+       "1  [475.39862, 621.64008, 897.72211, 1141.6857, 1...   \n",
+       "2  [481.54898, 610.02277, 916.85651, 1260.5923, 1...   \n",
+       "3  [211.61731, 463.09796, 603.87244, 915.48975, 1...   \n",
+       "4  [451.48065, 620.95673, 736.44647, 1001.5945, 1...   \n",
        "\n",
        "                                          Absorbance  \n",
-       "0  [2709.3699, 2697.1318, 2696.0413, 2678.5925, 2...  \n",
-       "1  [2979.3169, 2985.707, 2970.1677, 2947.095, 294...  \n",
-       "2  [3702.5627, 3592.4902, 3640.8423, 3593.415, 35...  \n",
-       "3  [8129.5938, 8222.3184, 8370.2803, 8534.415, 86...  \n",
-       "4  [3468.5203, 3463.0237, 3475.2666, 3468.5999, 3...  "
+       "0                  [1851.9185, 1746.4041, 1537.9485]  \n",
+       "1  [1998.4773, 2034.2784, 1977.515, 1779.342, 173...  \n",
+       "2  [2214.0876, 2846.9824, 3696.4109, 2195.7212, 2...  \n",
+       "3  [10350.545, 2536.3599, 3342.7229, 3452.3679, 3...  \n",
+       "4  [2277.2156, 2264.5063, 2167.6958, 2238.8494, 2...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,14 +211,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-16 17:09:04.412850: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-01-16 17:09:04.440047: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-01-16 17:09:04.440095: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-01-16 17:09:04.441000: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-01-16 17:09:04.446738: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-01-16 17:09:04.447577: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-01-16 17:42:45.768801: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-01-16 17:42:45.801562: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-01-16 17:42:45.801595: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-01-16 17:42:45.802321: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-01-16 17:42:45.806880: I external/local_tsl/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-01-16 17:42:45.807571: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-01-16 17:09:05.088816: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-01-16 17:42:46.503267: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,17 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Padding sequences with zeros\n",
-    "#X = pad_sequences(X, padding='post', dtype='float32')"
+    "X = pad_sequences(X, padding='post', dtype='float32')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "RandomForestClassifier()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,22 +325,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overall Accuracy: 0.7257799671592775\n",
+      "Overall Accuracy: 0.729064039408867\n",
       "\n",
       "\n",
       "Classification Report:\n",
       "               precision    recall  f1-score   support\n",
       "\n",
-      "Hyperglycemia       0.74      0.73      0.73       203\n",
-      " Hypoglycemia       0.71      0.72      0.71       200\n",
-      "       Normal       0.73      0.73      0.73       206\n",
+      "Hyperglycemia       0.72      0.74      0.73       203\n",
+      " Hypoglycemia       0.71      0.70      0.71       200\n",
+      "       Normal       0.75      0.74      0.75       206\n",
       "\n",
       "     accuracy                           0.73       609\n",
       "    macro avg       0.73      0.73      0.73       609\n",
@@ -348,9 +348,9 @@
       "\n",
       "\n",
       "Confusion Matrix:\n",
-      "[[148  27  28]\n",
-      " [ 29 144  27]\n",
-      " [ 24  32 150]]\n"
+      "[[151  28  24]\n",
+      " [ 34 140  26]\n",
+      " [ 25  28 153]]\n"
      ]
     }
    ],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "LogisticRegression(max_iter=1000, multi_class='multinomial')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
