--- a/python_code/peak_featureset.ipynb
+++ b/python_code/peak_featureset.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1 sample example"
+    "## 1 Sample Example"
    ]
   },
   {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -224,42 +224,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create a list of the sequence, wavenumber and absorbance for each sample"
+    "Create a list of the sequence, wavenumber and absorbance for the peaks of each sample."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"Seq_list = []\\nWaveNumber_list = []\\nAbsorbance_list = []\\n\\nfor sample in samples:\\n    subset = spectra_df[spectra_df['SpecID'] == sample]\\n    peaks, _ = find_peaks(x=subset['Absorbance'], distance=152, prominence=42, width=6)\\n    Seq_list.append(peaks)\\n    peak_rows = subset.iloc[peaks]\\n    WaveNumber_list.append(peak_rows['WaveNumber'].to_list())\\n    Absorbance_list.append(peak_rows['Absorbance'].to_list())\""
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"Seq_list = []\n",
-    "WaveNumber_list = []\n",
-    "Absorbance_list = []\n",
-    "\n",
-    "for sample in samples:\n",
-    "    subset = spectra_df[spectra_df['SpecID'] == sample]\n",
-    "    peaks, _ = find_peaks(x=subset['Absorbance'], distance=152, prominence=42, width=6)\n",
-    "    Seq_list.append(peaks)\n",
-    "    peak_rows = subset.iloc[peaks]\n",
-    "    WaveNumber_list.append(peak_rows['WaveNumber'].to_list())\n",
-    "    Absorbance_list.append(peak_rows['Absorbance'].to_list())\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,6 +238,7 @@
     "Absorbance_list = []\n",
     "\n",
     "for _, group in spectra_df.groupby('SpecID'):\n",
+    "    # Change this based on chosen peaks\n",
     "    peaks, _ = find_peaks(x=group['Absorbance'], distance=152, prominence=42, width=6)\n",
     "    Seq_list.append(peaks)\n",
     "    peak_rows = group.iloc[peaks]\n",
@@ -277,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -357,11 +328,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "featureset.to_csv(\"../../data/Thomas_peaks.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An attempt using the full spectrum."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Seq_list = []\n",
+    "WaveNumber_list = []\n",
+    "Absorbance_list = []\n",
+    "\n",
+    "for _, group in spectra_df.groupby('SpecID'):\n",
+    "    Seq_list.append(group['Seq'].tolist())\n",
+    "    WaveNumber_list.append(group['WaveNumber'].tolist())\n",
+    "    Absorbance_list.append(group['Absorbance'].tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "featureset = statuses.copy()\n",
+    "featureset = featureset.to_frame()\n",
+    "featureset['Seq'] = Seq_list\n",
+    "featureset['WaveNumber'] = WaveNumber_list\n",
+    "featureset['Absorbance'] = Absorbance_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    Status                                                Seq  \\\n",
+      "SpecID                                                                          \n",
+      "201210-1-00         Normal  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+      "201210-1-01         Normal  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+      "201210-1-02         Normal  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+      "201210-1-03         Normal  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+      "201210-1-04         Normal  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+      "...                    ...                                                ...   \n",
+      "210526-3-45  Hyperglycemia  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+      "210526-3-46  Hyperglycemia  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+      "210526-3-47  Hyperglycemia  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+      "210526-3-48  Hyperglycemia  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+      "210526-3-49  Hyperglycemia  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13,...   \n",
+      "\n",
+      "                                                    WaveNumber  \\\n",
+      "SpecID                                                           \n",
+      "201210-1-00  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+      "201210-1-01  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+      "201210-1-02  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+      "201210-1-03  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+      "201210-1-04  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+      "...                                                        ...   \n",
+      "210526-3-45  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+      "210526-3-46  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+      "210526-3-47  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+      "210526-3-48  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+      "210526-3-49  [200.0, 200.68336, 201.36674, 202.05011, 202.7...   \n",
+      "\n",
+      "                                                    Absorbance  \n",
+      "SpecID                                                          \n",
+      "201210-1-00  [2709.3699, 2697.1318, 2696.0413, 2678.5925, 2...  \n",
+      "201210-1-01  [2979.3169, 2985.707, 2970.1677, 2947.095, 294...  \n",
+      "201210-1-02  [3702.5627, 3592.4902, 3640.8423, 3593.415, 35...  \n",
+      "201210-1-03  [8129.5938, 8222.3184, 8370.2803, 8534.415, 86...  \n",
+      "201210-1-04  [3468.5203, 3463.0237, 3475.2666, 3468.5999, 3...  \n",
+      "...                                                        ...  \n",
+      "210526-3-45  [1999.2458, 1978.9969, 1999.8478, 1990.3569, 1...  \n",
+      "210526-3-46  [1953.6272, 1878.7441, 1913.1019, 1917.5201, 1...  \n",
+      "210526-3-47  [1924.9346, 1880.2902, 1873.738, 1865.1178, 18...  \n",
+      "210526-3-48  [1834.2257, 1827.9034, 1830.4606, 1825.1567, 1...  \n",
+      "210526-3-49  [1792.1012, 1771.9321, 1791.6136, 1807.9781, 1...  \n",
+      "\n",
+      "[3045 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(featureset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "featureset.to_csv(\"../../data/full_spectra.csv\")"
    ]
   }
  ],
