--- a/python_code/automl_test.ipynb
+++ b/python_code/automl_test.ipynb
@@ -1114,60 +1114,171 @@
    "outputs": [
     {
      "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
+       "<style type=\"text/css\">\n",
+       "#T_c5a43_row10_col0, #T_c5a43_row10_col1, #T_c5a43_row10_col2, #T_c5a43_row10_col3, #T_c5a43_row10_col4, #T_c5a43_row10_col5, #T_c5a43_row10_col6 {\n",
+       "  background: yellow;\n",
+       "}\n",
        "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
+       "<table id=\"T_c5a43\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_c5a43_level0_col0\" class=\"col_heading level0 col0\" >Accuracy</th>\n",
+       "      <th id=\"T_c5a43_level0_col1\" class=\"col_heading level0 col1\" >AUC</th>\n",
+       "      <th id=\"T_c5a43_level0_col2\" class=\"col_heading level0 col2\" >Recall</th>\n",
+       "      <th id=\"T_c5a43_level0_col3\" class=\"col_heading level0 col3\" >Prec.</th>\n",
+       "      <th id=\"T_c5a43_level0_col4\" class=\"col_heading level0 col4\" >F1</th>\n",
+       "      <th id=\"T_c5a43_level0_col5\" class=\"col_heading level0 col5\" >Kappa</th>\n",
+       "      <th id=\"T_c5a43_level0_col6\" class=\"col_heading level0 col6\" >MCC</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th class=\"index_name level0\" >Fold</th>\n",
+       "      <th class=\"blank col0\" >&nbsp;</th>\n",
+       "      <th class=\"blank col1\" >&nbsp;</th>\n",
+       "      <th class=\"blank col2\" >&nbsp;</th>\n",
+       "      <th class=\"blank col3\" >&nbsp;</th>\n",
+       "      <th class=\"blank col4\" >&nbsp;</th>\n",
+       "      <th class=\"blank col5\" >&nbsp;</th>\n",
+       "      <th class=\"blank col6\" >&nbsp;</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Initiated</th>\n",
-       "      <td>. . . . . . . . . . . . . . . . . .</td>\n",
-       "      <td>18:29:28</td>\n",
+       "      <th id=\"T_c5a43_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_c5a43_row0_col0\" class=\"data row0 col0\" >0.8224</td>\n",
+       "      <td id=\"T_c5a43_row0_col1\" class=\"data row0 col1\" >0.9358</td>\n",
+       "      <td id=\"T_c5a43_row0_col2\" class=\"data row0 col2\" >0.8224</td>\n",
+       "      <td id=\"T_c5a43_row0_col3\" class=\"data row0 col3\" >0.8346</td>\n",
+       "      <td id=\"T_c5a43_row0_col4\" class=\"data row0 col4\" >0.8246</td>\n",
+       "      <td id=\"T_c5a43_row0_col5\" class=\"data row0 col5\" >0.7343</td>\n",
+       "      <td id=\"T_c5a43_row0_col6\" class=\"data row0 col6\" >0.7379</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Status</th>\n",
-       "      <td>. . . . . . . . . . . . . . . . . .</td>\n",
-       "      <td>Searching Hyperparameters</td>\n",
+       "      <th id=\"T_c5a43_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_c5a43_row1_col0\" class=\"data row1 col0\" >0.7934</td>\n",
+       "      <td id=\"T_c5a43_row1_col1\" class=\"data row1 col1\" >0.9137</td>\n",
+       "      <td id=\"T_c5a43_row1_col2\" class=\"data row1 col2\" >0.7934</td>\n",
+       "      <td id=\"T_c5a43_row1_col3\" class=\"data row1 col3\" >0.7947</td>\n",
+       "      <td id=\"T_c5a43_row1_col4\" class=\"data row1 col4\" >0.7935</td>\n",
+       "      <td id=\"T_c5a43_row1_col5\" class=\"data row1 col5\" >0.6895</td>\n",
+       "      <td id=\"T_c5a43_row1_col6\" class=\"data row1 col6\" >0.6900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Estimator</th>\n",
-       "      <td>. . . . . . . . . . . . . . . . . .</td>\n",
-       "      <td>Random Forest Classifier</td>\n",
+       "      <th id=\"T_c5a43_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_c5a43_row2_col0\" class=\"data row2 col0\" >0.7418</td>\n",
+       "      <td id=\"T_c5a43_row2_col1\" class=\"data row2 col1\" >0.9089</td>\n",
+       "      <td id=\"T_c5a43_row2_col2\" class=\"data row2 col2\" >0.7418</td>\n",
+       "      <td id=\"T_c5a43_row2_col3\" class=\"data row2 col3\" >0.7530</td>\n",
+       "      <td id=\"T_c5a43_row2_col4\" class=\"data row2 col4\" >0.7421</td>\n",
+       "      <td id=\"T_c5a43_row2_col5\" class=\"data row2 col5\" >0.6141</td>\n",
+       "      <td id=\"T_c5a43_row2_col6\" class=\"data row2 col6\" >0.6187</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c5a43_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_c5a43_row3_col0\" class=\"data row3 col0\" >0.7981</td>\n",
+       "      <td id=\"T_c5a43_row3_col1\" class=\"data row3 col1\" >0.9281</td>\n",
+       "      <td id=\"T_c5a43_row3_col2\" class=\"data row3 col2\" >0.7981</td>\n",
+       "      <td id=\"T_c5a43_row3_col3\" class=\"data row3 col3\" >0.8042</td>\n",
+       "      <td id=\"T_c5a43_row3_col4\" class=\"data row3 col4\" >0.7988</td>\n",
+       "      <td id=\"T_c5a43_row3_col5\" class=\"data row3 col5\" >0.6973</td>\n",
+       "      <td id=\"T_c5a43_row3_col6\" class=\"data row3 col6\" >0.6993</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c5a43_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_c5a43_row4_col0\" class=\"data row4 col0\" >0.7934</td>\n",
+       "      <td id=\"T_c5a43_row4_col1\" class=\"data row4 col1\" >0.9275</td>\n",
+       "      <td id=\"T_c5a43_row4_col2\" class=\"data row4 col2\" >0.7934</td>\n",
+       "      <td id=\"T_c5a43_row4_col3\" class=\"data row4 col3\" >0.7986</td>\n",
+       "      <td id=\"T_c5a43_row4_col4\" class=\"data row4 col4\" >0.7949</td>\n",
+       "      <td id=\"T_c5a43_row4_col5\" class=\"data row4 col5\" >0.6902</td>\n",
+       "      <td id=\"T_c5a43_row4_col6\" class=\"data row4 col6\" >0.6911</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c5a43_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_c5a43_row5_col0\" class=\"data row5 col0\" >0.7559</td>\n",
+       "      <td id=\"T_c5a43_row5_col1\" class=\"data row5 col1\" >0.9339</td>\n",
+       "      <td id=\"T_c5a43_row5_col2\" class=\"data row5 col2\" >0.7559</td>\n",
+       "      <td id=\"T_c5a43_row5_col3\" class=\"data row5 col3\" >0.7645</td>\n",
+       "      <td id=\"T_c5a43_row5_col4\" class=\"data row5 col4\" >0.7567</td>\n",
+       "      <td id=\"T_c5a43_row5_col5\" class=\"data row5 col5\" >0.6337</td>\n",
+       "      <td id=\"T_c5a43_row5_col6\" class=\"data row5 col6\" >0.6364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c5a43_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_c5a43_row6_col0\" class=\"data row6 col0\" >0.7700</td>\n",
+       "      <td id=\"T_c5a43_row6_col1\" class=\"data row6 col1\" >0.9212</td>\n",
+       "      <td id=\"T_c5a43_row6_col2\" class=\"data row6 col2\" >0.7700</td>\n",
+       "      <td id=\"T_c5a43_row6_col3\" class=\"data row6 col3\" >0.7795</td>\n",
+       "      <td id=\"T_c5a43_row6_col4\" class=\"data row6 col4\" >0.7700</td>\n",
+       "      <td id=\"T_c5a43_row6_col5\" class=\"data row6 col5\" >0.6549</td>\n",
+       "      <td id=\"T_c5a43_row6_col6\" class=\"data row6 col6\" >0.6586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c5a43_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_c5a43_row7_col0\" class=\"data row7 col0\" >0.7887</td>\n",
+       "      <td id=\"T_c5a43_row7_col1\" class=\"data row7 col1\" >0.9373</td>\n",
+       "      <td id=\"T_c5a43_row7_col2\" class=\"data row7 col2\" >0.7887</td>\n",
+       "      <td id=\"T_c5a43_row7_col3\" class=\"data row7 col3\" >0.8080</td>\n",
+       "      <td id=\"T_c5a43_row7_col4\" class=\"data row7 col4\" >0.7924</td>\n",
+       "      <td id=\"T_c5a43_row7_col5\" class=\"data row7 col5\" >0.6838</td>\n",
+       "      <td id=\"T_c5a43_row7_col6\" class=\"data row7 col6\" >0.6886</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c5a43_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_c5a43_row8_col0\" class=\"data row8 col0\" >0.7840</td>\n",
+       "      <td id=\"T_c5a43_row8_col1\" class=\"data row8 col1\" >0.9076</td>\n",
+       "      <td id=\"T_c5a43_row8_col2\" class=\"data row8 col2\" >0.7840</td>\n",
+       "      <td id=\"T_c5a43_row8_col3\" class=\"data row8 col3\" >0.7890</td>\n",
+       "      <td id=\"T_c5a43_row8_col4\" class=\"data row8 col4\" >0.7842</td>\n",
+       "      <td id=\"T_c5a43_row8_col5\" class=\"data row8 col5\" >0.6765</td>\n",
+       "      <td id=\"T_c5a43_row8_col6\" class=\"data row8 col6\" >0.6786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c5a43_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_c5a43_row9_col0\" class=\"data row9 col0\" >0.6995</td>\n",
+       "      <td id=\"T_c5a43_row9_col1\" class=\"data row9 col1\" >0.8987</td>\n",
+       "      <td id=\"T_c5a43_row9_col2\" class=\"data row9 col2\" >0.6995</td>\n",
+       "      <td id=\"T_c5a43_row9_col3\" class=\"data row9 col3\" >0.7238</td>\n",
+       "      <td id=\"T_c5a43_row9_col4\" class=\"data row9 col4\" >0.6993</td>\n",
+       "      <td id=\"T_c5a43_row9_col5\" class=\"data row9 col5\" >0.5506</td>\n",
+       "      <td id=\"T_c5a43_row9_col6\" class=\"data row9 col6\" >0.5591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c5a43_level0_row10\" class=\"row_heading level0 row10\" >Mean</th>\n",
+       "      <td id=\"T_c5a43_row10_col0\" class=\"data row10 col0\" >0.7747</td>\n",
+       "      <td id=\"T_c5a43_row10_col1\" class=\"data row10 col1\" >0.9213</td>\n",
+       "      <td id=\"T_c5a43_row10_col2\" class=\"data row10 col2\" >0.7747</td>\n",
+       "      <td id=\"T_c5a43_row10_col3\" class=\"data row10 col3\" >0.7850</td>\n",
+       "      <td id=\"T_c5a43_row10_col4\" class=\"data row10 col4\" >0.7756</td>\n",
+       "      <td id=\"T_c5a43_row10_col5\" class=\"data row10 col5\" >0.6625</td>\n",
+       "      <td id=\"T_c5a43_row10_col6\" class=\"data row10 col6\" >0.6658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_c5a43_level0_row11\" class=\"row_heading level0 row11\" >Std</th>\n",
+       "      <td id=\"T_c5a43_row11_col0\" class=\"data row11 col0\" >0.0331</td>\n",
+       "      <td id=\"T_c5a43_row11_col1\" class=\"data row11 col1\" >0.0127</td>\n",
+       "      <td id=\"T_c5a43_row11_col2\" class=\"data row11 col2\" >0.0331</td>\n",
+       "      <td id=\"T_c5a43_row11_col3\" class=\"data row11 col3\" >0.0298</td>\n",
+       "      <td id=\"T_c5a43_row11_col4\" class=\"data row11 col4\" >0.0337</td>\n",
+       "      <td id=\"T_c5a43_row11_col5\" class=\"data row11 col5\" >0.0493</td>\n",
+       "      <td id=\"T_c5a43_row11_col6\" class=\"data row11 col6\" >0.0477</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "</table>\n"
       ],
       "text/plain": [
-       "                                                                         \n",
-       "                                                                         \n",
-       "Initiated  . . . . . . . . . . . . . . . . . .                   18:29:28\n",
-       "Status     . . . . . . . . . . . . . . . . . .  Searching Hyperparameters\n",
-       "Estimator  . . . . . . . . . . . . . . . . . .   Random Forest Classifier"
+       "<pandas.io.formats.style.Styler at 0x1a51f83da50>"
       ]
      },
      "metadata": {},
@@ -1184,24 +1295,11 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aeb497227ad0441bba72fc834253f706",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Processing:   0%|          | 0/7 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 10 folds for each of 10 candidates, totalling 100 fits\n"
+      "Fitting 10 folds for each of 10 candidates, totalling 100 fits\n",
+      "Original model was better than the tuned model, hence it will be returned. NOTE: The display metrics are for the tuned model (not the original one).\n"
      ]
     }
    ],
@@ -1211,9 +1309,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "588055a34cd143e99c4e72a984fd3c47",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(ToggleButtons(description='Plot Type:', icons=('',), options=(('Pipeline Plot', 'pipelin…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "evaluate_model(tuned_model)"
    ]
