--- a/python_code/peak_feature_engineering.ipynb
+++ b/python_code/peak_feature_engineering.ipynb
@@ -271,14 +271,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix"
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.ensemble import ExtraTreesClassifier"
    ]
   },
   {
@@ -353,8 +354,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compare the techniques on different models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_random_forest(df, random_state=1234):\n",
+    "    \n",
+    "    # Splitting the dataframe into features (X) and target variable (y)\n",
+    "    X = df.drop(['Status'], axis=1)\n",
+    "    y = df['Status']\n",
+    "\n",
+    "    # Splitting the data into training and testing sets\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
+    "\n",
+    "    # Initializing and fitting the Random Forest classifier\n",
+    "    rf = RandomForestClassifier(random_state=random_state)\n",
+    "    rf.fit(X_train, y_train)\n",
+    "\n",
+    "    # Making predictions on the test set\n",
+    "    y_pred = rf.predict(X_test)\n",
+    "\n",
+    "    # Calculating and printing evaluation metrics\n",
+    "    calculate_metrics(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -384,20 +418,12 @@
     }
    ],
    "source": [
-    "X = raw_df.drop(['Status'], axis=1)  # Features\n",
-    "y = raw_df['Status']\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1234)\n",
-    "\n",
-    "rf = RandomForestClassifier(random_state=1234)\n",
-    "rf.fit(X_train, y_train)\n",
-    "y_pred = rf.predict(X_test)\n",
-    "calculate_metrics(y_test, y_pred)"
+    "train_random_forest(raw_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -427,20 +453,12 @@
     }
    ],
    "source": [
-    "X = smooth_df.drop(['Status'], axis=1)  # Features\n",
-    "y = smooth_df['Status']\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1234)\n",
-    "\n",
-    "rf = RandomForestClassifier(random_state=1234)\n",
-    "rf.fit(X_train, y_train)\n",
-    "y_pred = rf.predict(X_test)\n",
-    "calculate_metrics(y_test, y_pred)"
+    "train_random_forest(smooth_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -470,15 +488,138 @@
     }
    ],
    "source": [
-    "X = baseline_df.drop(['Status'], axis=1)  # Features\n",
-    "y = baseline_df['Status']\n",
+    "train_random_forest(baseline_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_extra_trees(df, random_state=1234):\n",
+    "    \n",
+    "    # Splitting the dataframe into features (X) and target variable (y)\n",
+    "    X = df.drop(['Status'], axis=1)\n",
+    "    y = df['Status']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1234)\n",
+    "    # Splitting the data into training and testing sets\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=random_state)\n",
     "\n",
-    "rf = RandomForestClassifier(random_state=1234)\n",
-    "rf.fit(X_train, y_train)\n",
-    "y_pred = rf.predict(X_test)\n",
-    "calculate_metrics(y_test, y_pred)"
+    "    # Initializing and fitting the Random Forest classifier\n",
+    "    et = ExtraTreesClassifier(random_state=random_state)\n",
+    "    et.fit(X_train, y_train)\n",
+    "\n",
+    "    # Making predictions on the test set\n",
+    "    y_pred = et.predict(X_test)\n",
+    "\n",
+    "    # Calculating and printing evaluation metrics\n",
+    "    calculate_metrics(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall Accuracy: 0.8784893267651889\n",
+      "\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "Hyperglycemia       0.86      0.87      0.87       181\n",
+      " Hypoglycemia       0.92      0.89      0.90       219\n",
+      "       Normal       0.86      0.88      0.87       209\n",
+      "\n",
+      "     accuracy                           0.88       609\n",
+      "    macro avg       0.88      0.88      0.88       609\n",
+      " weighted avg       0.88      0.88      0.88       609\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[158  10  13]\n",
+      " [  7 194  18]\n",
+      " [ 19   7 183]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_extra_trees(raw_df, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall Accuracy: 0.8702791461412152\n",
+      "\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "Hyperglycemia       0.86      0.86      0.86       181\n",
+      " Hypoglycemia       0.90      0.89      0.90       219\n",
+      "       Normal       0.85      0.86      0.85       209\n",
+      "\n",
+      "     accuracy                           0.87       609\n",
+      "    macro avg       0.87      0.87      0.87       609\n",
+      " weighted avg       0.87      0.87      0.87       609\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[155  11  15]\n",
+      " [  6 195  18]\n",
+      " [ 19  10 180]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_extra_trees(smooth_df, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overall Accuracy: 0.8801313628899836\n",
+      "\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "Hyperglycemia       0.86      0.89      0.87       181\n",
+      " Hypoglycemia       0.91      0.88      0.90       219\n",
+      "       Normal       0.87      0.88      0.87       209\n",
+      "\n",
+      "     accuracy                           0.88       609\n",
+      "    macro avg       0.88      0.88      0.88       609\n",
+      " weighted avg       0.88      0.88      0.88       609\n",
+      "\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[161   9  11]\n",
+      " [ 10 192  17]\n",
+      " [ 17   9 183]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_extra_trees(baseline_df, 2)"
    ]
   }
  ],
